cmds/assembler/HP/y.output
   0  $accept : statement $end

   1  statement :

   2  $$1 :

   3  statement : statement $$1 label

   4  $$2 :

   5  statement : statement $$2 mnemonic
   6            | statement error

   7  label : LABEL

   8  mnemonic : pseudo_op
   9           | machine_op

  10  pseudo_op : byte
  11            | short
  12            | word
  13            | blockbyte
  14            | blockshort
  15            | blockword
  16            | double
  17            | floaty
  18            | space
  19            | align
  20            | data
  21            | common
  22            | codetable
  23            | export
  24            | import
  25            | module
  26            | init
  27            | ref
  28            | patchinstr
  29            | usererror
  30            | userwarning
  31            | usernote

  32  byte : BYTE codeconstlist

  33  short : SHORT codeconstlist

  34  word : WORD codeconstlist

  35  floaty : FLOATY floatconstlist

  36  double : DOUBLE floatconstlist

  37  blockbyte : BLOCKBYTE imm_constexpr ',' codeconstlist

  38  blockshort : BLOCKSHORT imm_constexpr ',' codeconstlist

  39  blockword : BLOCKWORD imm_constexpr ',' codeconstlist

  40  space : SPACE imm_constexpr

  41  align : ALIGN opt_imm_constexpr

  42  data : DATA NAME ',' constexpr

  43  common : COMMON NAME ',' constexpr

  44  codetable : CODETABLE namelist

  45  export : EXPORT namelist

  46  import : IMPORT namelist

  47  module : MODULE opt_constexpr

  48  init : INIT

  49  ref : REF namelist

  50  patchinstr : PATCHINSTR '(' instrpatch ',' stdpatch ',' machine_op ')'

  51  usererror : USERERROR STRINGCONST

  52  userwarning : USERWARNING STRINGCONST

  53  usernote : USERNOTE STRINGCONST

  54  stdpatch : MODSIZE
  55           | MODNUM
  56           | DATASYMB '(' NAME ')'
  57           | CODESYMB '(' NAME ')'
  58           | DATAMODULE '(' NAME ')'
  59           | LABELREF '(' NAME ')'
  60           | CODESTUB '(' NAME ')'
  61           | ADDRSTUB '(' NAME ')'
  62           | BYTESWAP '(' stdpatch ')'
  63           | SHIFT '(' constexpr ',' stdpatch ')'
  64           | P_ADD '(' constexpr ',' stdpatch ')'
  65           | P_OR '(' constexpr ',' stdpatch ')'

  66  namelist : NAME
  67           | namelist ',' NAME

  68  $$3 :

  69  codeconstlist : $$3 codeconst
  70                | codeconstlist ',' codeconst

  71  $$4 :

  72  floatconstlist : $$4 imm_fp_constexpr
  73                 | floatconstlist ',' imm_fp_constexpr

  74  codeconst : constexpr
  75            | stdpatch
  76            | STRINGCONST

  77  imm_constexpr : '(' imm_constexpr ')'
  78                | imm_constexpr '+' imm_constexpr
  79                | imm_constexpr '-' imm_constexpr
  80                | imm_constexpr '*' imm_constexpr
  81                | imm_constexpr '/' imm_constexpr
  82                | imm_constexpr '%' imm_constexpr
  83                | imm_constexpr '&' imm_constexpr
  84                | imm_constexpr '|' imm_constexpr
  85                | imm_constexpr '^' imm_constexpr
  86                | imm_constexpr LSHIFT imm_constexpr
  87                | imm_constexpr RSHIFT imm_constexpr
  88                | '~' imm_constexpr
  89                | '-' imm_constexpr
  90                | NUMBER
  91                | CHARCONST

  92  imm_fp_constexpr : '(' imm_fp_constexpr ')'
  93                   | imm_fp_constexpr '+' imm_fp_constexpr
  94                   | imm_fp_constexpr '-' imm_fp_constexpr
  95                   | imm_fp_constexpr '*' imm_fp_constexpr
  96                   | imm_fp_constexpr '/' imm_fp_constexpr
  97                   | '-' imm_fp_constexpr
  98                   | NUMBER
  99                   | FLOATNUM

 100  opt_imm_constexpr :
 101                    | imm_constexpr

 102  constexpr : '(' constexpr ')'
 103            | constexpr '+' constexpr
 104            | constexpr '-' constexpr
 105            | constexpr '*' constexpr
 106            | constexpr '/' constexpr
 107            | constexpr '%' constexpr
 108            | constexpr '&' constexpr
 109            | constexpr '|' constexpr
 110            | constexpr '^' constexpr
 111            | constexpr LSHIFT constexpr
 112            | constexpr RSHIFT constexpr
 113            | '~' constexpr
 114            | '-' constexpr
 115            | NUMBER
 116            | CHARCONST
 117            | NAME

 118  opt_constexpr :
 119                | constexpr

 120  reg : R0
 121      | R1
 122      | R2
 123      | R3
 124      | R4
 125      | R5
 126      | R6
 127      | R7
 128      | R8
 129      | R9
 130      | R10
 131      | R11
 132      | R12
 133      | R13
 134      | R14
 135      | R15
 136      | error

 137  cp_reg : CR0
 138         | CR1
 139         | CR2
 140         | CR3
 141         | CR4
 142         | CR5
 143         | CR6
 144         | CR7
 145         | CR8
 146         | CR9
 147         | CR10
 148         | CR11
 149         | CR12
 150         | CR13
 151         | CR14
 152         | CR15
 153         | error

 154  $$5 :

 155  machine_op : $$5 ARM_op

 156  ARM_op : branch
 157         | dataproc
 158         | arm6psr
 159         | multiply
 160         | datatran
 161         | ldstmult
 162         | softintr
 163         | swap
 164         | coproc
 165         | pseudo

 166  branch : branch_ops armconstexpr

 167  branch_ops : B
 168             | BL

 169  dataproc : move
 170           | comp
 171           | logic

 172  move : move_ops reg ',' op2

 173  comp : comp_ops reg ',' op2

 174  logic : logic_ops reg ',' reg ',' op2
 175        | logic_ops reg ',' op2

 176  op2 : shifttype
 177      | armconstexpr

 178  shifttype : reg
 179            | reg shiftname reg
 180            | reg shiftname armconstexpr
 181            | reg RRX

 182  shiftname : LSL
 183            | LSR
 184            | ASR
 185            | ROR

 186  comp_ops : TST
 187           | TEQ
 188           | CMP
 189           | CMN

 190  move_ops : MVN
 191           | MOV

 192  logic_ops : AND
 193            | EOR
 194            | SUB
 195            | RSB
 196            | ADD
 197            | ADC
 198            | SBC
 199            | RSC
 200            | ORR
 201            | BIC

 202  arm6psr : mrs
 203          | msr

 204  mrs : MRS reg ',' cpsr

 205  msr : MSR cpsr_flg ',' reg_expr

 206  reg_expr : reg
 207           | armconstexpr

 208  cpsr : CPSR
 209       | SPSR

 210  cpsr_flg : CPSR
 211           | CPSR_FLG
 212           | SPSR
 213           | SPSR_FLG

 214  multiply : MUL reg ',' reg ',' reg
 215           | MLA reg ',' reg ',' reg ',' reg

 216  datatran : data_ops reg ',' addr

 217  addr : armconstexpr
 218       | preindex
 219       | postindex

 220  preindex : '[' reg ']' optpling
 221           | '(' reg ')' optpling
 222           | '[' reg ',' armconstexpr ']' optpling
 223           | '(' reg ',' armconstexpr ')' optpling
 224           | '[' reg ',' indexreg optshift ']' optpling
 225           | '(' reg ',' indexreg optshift ')' optpling

 226  postindex : '[' reg ']' ',' armconstexpr
 227            | '(' reg ')' ',' armconstexpr
 228            | '[' reg ']' ',' indexreg optshift
 229            | '(' reg ')' ',' indexreg optshift

 230  indexreg : reg
 231           | '+' reg
 232           | '-' reg

 233  optshift :
 234           | shiftname armconstexpr
 235           | RRX

 236  optpling :
 237           | '!'

 238  data_ops : LDR
 239           | STR

 240  ldstmult : ldstmult_ops reg optpling ',' reglist optclaret

 241  reglist : reg
 242          | '{' regs '}'

 243  regs : reg
 244       | reg '-' reg
 245       | reg ',' regs
 246       | reg '-' reg ',' regs

 247  optclaret :
 248            | '^'

 249  ldstmult_ops : LDM
 250               | STM

 251  softintr : SWI armconstexpr

 252  swap : SWP reg ',' reg ',' '[' reg ']'
 253       | SWP reg ',' reg ',' '(' reg ')'

 254  coproc : cdo
 255         | cdt
 256         | crt

 257  cdo : CDO armconstexpr ',' armconstexpr ',' cp_reg ',' cp_reg ',' cp_reg optaux

 258  cdt : cdt_ops armconstexpr ',' cp_reg ',' cp_addr

 259  cdt_ops : LDC
 260          | STC

 261  crt : crt_ops armconstexpr ',' armconstexpr ',' reg ',' cp_reg ',' cp_reg optaux

 262  crt_ops : MCR
 263          | MRC

 264  optaux :
 265         | ',' armconstexpr

 266  cp_addr : armconstexpr
 267          | cp_preindex
 268          | cp_postindex

 269  cp_preindex : '[' reg ']' optpling
 270              | '(' reg ')' optpling
 271              | '[' reg ',' armconstexpr ']' optpling
 272              | '(' reg ',' armconstexpr ')' optpling

 273  cp_postindex : '[' reg ']' ',' armconstexpr optpling
 274               | '(' reg ')' ',' armconstexpr optpling

 275  pseudo : LEA reg ',' constexpr
 276         | NOP

 277  armconstexpr : '#' constexpr
 278               | constexpr

 279  instrpatch : armconstexpr
 280             | armpatches

 281  armpatches : PATCHARMDT
 282             | PATCHARMDP
 283             | PATCHARMJP
 284             | PATCHARMDPLSB
 285             | PATCHARMDPMID
 286             | PATCHARMDPREST

state 0
	$accept : . statement $end  (0)
	statement : .  (1)

	.  reduce 1

	statement  goto 1


state 1
	$accept : statement . $end  (0)
	statement : statement . $$1 label  (3)
	statement : statement . $$2 mnemonic  (5)
	statement : statement . error  (6)
	$$1 : .  (2)
	$$2 : .  (4)

	$end  accept
	error  shift 2
	USERERROR  reduce 4
	USERWARNING  reduce 4
	USERNOTE  reduce 4
	BYTE  reduce 4
	SHORT  reduce 4
	WORD  reduce 4
	FLOATY  reduce 4
	DOUBLE  reduce 4
	BLOCKBYTE  reduce 4
	BLOCKSHORT  reduce 4
	BLOCKWORD  reduce 4
	SPACE  reduce 4
	ALIGN  reduce 4
	DATA  reduce 4
	COMMON  reduce 4
	CODETABLE  reduce 4
	EXPORT  reduce 4
	IMPORT  reduce 4
	MODULE  reduce 4
	INIT  reduce 4
	REF  reduce 4
	PATCHINSTR  reduce 4
	LABEL  reduce 2
	B  reduce 4
	BL  reduce 4
	AND  reduce 4
	EOR  reduce 4
	SUB  reduce 4
	RSB  reduce 4
	ADD  reduce 4
	ADC  reduce 4
	SBC  reduce 4
	RSC  reduce 4
	ORR  reduce 4
	BIC  reduce 4
	TST  reduce 4
	TEQ  reduce 4
	CMP  reduce 4
	CMN  reduce 4
	MOV  reduce 4
	MVN  reduce 4
	MUL  reduce 4
	MLA  reduce 4
	LDR  reduce 4
	STR  reduce 4
	LDM  reduce 4
	STM  reduce 4
	SWI  reduce 4
	SWP  reduce 4
	CDO  reduce 4
	LDC  reduce 4
	STC  reduce 4
	MRC  reduce 4
	MCR  reduce 4
	LEA  reduce 4
	NOP  reduce 4
	MRS  reduce 4
	MSR  reduce 4

	$$1  goto 3
	$$2  goto 4


state 2
	statement : statement error .  (6)

	.  reduce 6


state 3
	statement : statement $$1 . label  (3)

	LABEL  shift 5
	.  error

	label  goto 6


state 4
	statement : statement $$2 . mnemonic  (5)
	$$5 : .  (154)

	USERERROR  shift 7
	USERWARNING  shift 8
	USERNOTE  shift 9
	BYTE  shift 10
	SHORT  shift 11
	WORD  shift 12
	FLOATY  shift 13
	DOUBLE  shift 14
	BLOCKBYTE  shift 15
	BLOCKSHORT  shift 16
	BLOCKWORD  shift 17
	SPACE  shift 18
	ALIGN  shift 19
	DATA  shift 20
	COMMON  shift 21
	CODETABLE  shift 22
	EXPORT  shift 23
	IMPORT  shift 24
	MODULE  shift 25
	INIT  shift 26
	REF  shift 27
	PATCHINSTR  shift 28
	B  reduce 154
	BL  reduce 154
	AND  reduce 154
	EOR  reduce 154
	SUB  reduce 154
	RSB  reduce 154
	ADD  reduce 154
	ADC  reduce 154
	SBC  reduce 154
	RSC  reduce 154
	ORR  reduce 154
	BIC  reduce 154
	TST  reduce 154
	TEQ  reduce 154
	CMP  reduce 154
	CMN  reduce 154
	MOV  reduce 154
	MVN  reduce 154
	MUL  reduce 154
	MLA  reduce 154
	LDR  reduce 154
	STR  reduce 154
	LDM  reduce 154
	STM  reduce 154
	SWI  reduce 154
	SWP  reduce 154
	CDO  reduce 154
	LDC  reduce 154
	STC  reduce 154
	MRC  reduce 154
	MCR  reduce 154
	LEA  reduce 154
	NOP  reduce 154
	MRS  reduce 154
	MSR  reduce 154

	mnemonic  goto 29
	pseudo_op  goto 30
	machine_op  goto 31
	byte  goto 32
	short  goto 33
	word  goto 34
	blockbyte  goto 35
	blockshort  goto 36
	blockword  goto 37
	double  goto 38
	floaty  goto 39
	space  goto 40
	align  goto 41
	data  goto 42
	common  goto 43
	codetable  goto 44
	export  goto 45
	import  goto 46
	module  goto 47
	init  goto 48
	ref  goto 49
	patchinstr  goto 50
	usererror  goto 51
	userwarning  goto 52
	usernote  goto 53
	$$5  goto 54


state 5
	label : LABEL .  (7)

	.  reduce 7


state 6
	statement : statement $$1 label .  (3)

	.  reduce 3


state 7
	usererror : USERERROR . STRINGCONST  (51)

	STRINGCONST  shift 55
	.  error


state 8
	userwarning : USERWARNING . STRINGCONST  (52)

	STRINGCONST  shift 56
	.  error


state 9
	usernote : USERNOTE . STRINGCONST  (53)

	STRINGCONST  shift 57
	.  error


state 10
	byte : BYTE . codeconstlist  (32)
	$$3 : .  (68)

	.  reduce 68

	codeconstlist  goto 58
	$$3  goto 59


state 11
	short : SHORT . codeconstlist  (33)
	$$3 : .  (68)

	.  reduce 68

	codeconstlist  goto 60
	$$3  goto 59


state 12
	word : WORD . codeconstlist  (34)
	$$3 : .  (68)

	.  reduce 68

	codeconstlist  goto 61
	$$3  goto 59


state 13
	floaty : FLOATY . floatconstlist  (35)
	$$4 : .  (71)

	.  reduce 71

	floatconstlist  goto 62
	$$4  goto 63


state 14
	double : DOUBLE . floatconstlist  (36)
	$$4 : .  (71)

	.  reduce 71

	floatconstlist  goto 64
	$$4  goto 63


state 15
	blockbyte : BLOCKBYTE . imm_constexpr ',' codeconstlist  (37)

	NUMBER  shift 65
	CHARCONST  shift 66
	'-'  shift 67
	'('  shift 68
	'~'  shift 69
	.  error

	imm_constexpr  goto 70


state 16
	blockshort : BLOCKSHORT . imm_constexpr ',' codeconstlist  (38)

	NUMBER  shift 65
	CHARCONST  shift 66
	'-'  shift 67
	'('  shift 68
	'~'  shift 69
	.  error

	imm_constexpr  goto 71


state 17
	blockword : BLOCKWORD . imm_constexpr ',' codeconstlist  (39)

	NUMBER  shift 65
	CHARCONST  shift 66
	'-'  shift 67
	'('  shift 68
	'~'  shift 69
	.  error

	imm_constexpr  goto 72


state 18
	space : SPACE . imm_constexpr  (40)

	NUMBER  shift 65
	CHARCONST  shift 66
	'-'  shift 67
	'('  shift 68
	'~'  shift 69
	.  error

	imm_constexpr  goto 73


state 19
	align : ALIGN . opt_imm_constexpr  (41)
	opt_imm_constexpr : .  (100)

	NUMBER  shift 65
	CHARCONST  shift 66
	'-'  shift 67
	'('  shift 68
	'~'  shift 69
	$end  reduce 100
	error  reduce 100
	USERERROR  reduce 100
	USERWARNING  reduce 100
	USERNOTE  reduce 100
	BYTE  reduce 100
	SHORT  reduce 100
	WORD  reduce 100
	FLOATY  reduce 100
	DOUBLE  reduce 100
	BLOCKBYTE  reduce 100
	BLOCKSHORT  reduce 100
	BLOCKWORD  reduce 100
	SPACE  reduce 100
	ALIGN  reduce 100
	DATA  reduce 100
	COMMON  reduce 100
	CODETABLE  reduce 100
	EXPORT  reduce 100
	IMPORT  reduce 100
	MODULE  reduce 100
	INIT  reduce 100
	REF  reduce 100
	PATCHINSTR  reduce 100
	LABEL  reduce 100
	B  reduce 100
	BL  reduce 100
	AND  reduce 100
	EOR  reduce 100
	SUB  reduce 100
	RSB  reduce 100
	ADD  reduce 100
	ADC  reduce 100
	SBC  reduce 100
	RSC  reduce 100
	ORR  reduce 100
	BIC  reduce 100
	TST  reduce 100
	TEQ  reduce 100
	CMP  reduce 100
	CMN  reduce 100
	MOV  reduce 100
	MVN  reduce 100
	MUL  reduce 100
	MLA  reduce 100
	LDR  reduce 100
	STR  reduce 100
	LDM  reduce 100
	STM  reduce 100
	SWI  reduce 100
	SWP  reduce 100
	CDO  reduce 100
	LDC  reduce 100
	STC  reduce 100
	MRC  reduce 100
	MCR  reduce 100
	LEA  reduce 100
	NOP  reduce 100
	MRS  reduce 100
	MSR  reduce 100

	imm_constexpr  goto 74
	opt_imm_constexpr  goto 75


state 20
	data : DATA . NAME ',' constexpr  (42)

	NAME  shift 76
	.  error


state 21
	common : COMMON . NAME ',' constexpr  (43)

	NAME  shift 77
	.  error


state 22
	codetable : CODETABLE . namelist  (44)

	NAME  shift 78
	.  error

	namelist  goto 79


state 23
	export : EXPORT . namelist  (45)

	NAME  shift 78
	.  error

	namelist  goto 80


state 24
	import : IMPORT . namelist  (46)

	NAME  shift 78
	.  error

	namelist  goto 81


state 25
	module : MODULE . opt_constexpr  (47)
	opt_constexpr : .  (118)

	NAME  shift 82
	NUMBER  shift 83
	CHARCONST  shift 84
	'-'  shift 85
	'('  shift 86
	'~'  shift 87
	$end  reduce 118
	error  reduce 118
	USERERROR  reduce 118
	USERWARNING  reduce 118
	USERNOTE  reduce 118
	BYTE  reduce 118
	SHORT  reduce 118
	WORD  reduce 118
	FLOATY  reduce 118
	DOUBLE  reduce 118
	BLOCKBYTE  reduce 118
	BLOCKSHORT  reduce 118
	BLOCKWORD  reduce 118
	SPACE  reduce 118
	ALIGN  reduce 118
	DATA  reduce 118
	COMMON  reduce 118
	CODETABLE  reduce 118
	EXPORT  reduce 118
	IMPORT  reduce 118
	MODULE  reduce 118
	INIT  reduce 118
	REF  reduce 118
	PATCHINSTR  reduce 118
	LABEL  reduce 118
	B  reduce 118
	BL  reduce 118
	AND  reduce 118
	EOR  reduce 118
	SUB  reduce 118
	RSB  reduce 118
	ADD  reduce 118
	ADC  reduce 118
	SBC  reduce 118
	RSC  reduce 118
	ORR  reduce 118
	BIC  reduce 118
	TST  reduce 118
	TEQ  reduce 118
	CMP  reduce 118
	CMN  reduce 118
	MOV  reduce 118
	MVN  reduce 118
	MUL  reduce 118
	MLA  reduce 118
	LDR  reduce 118
	STR  reduce 118
	LDM  reduce 118
	STM  reduce 118
	SWI  reduce 118
	SWP  reduce 118
	CDO  reduce 118
	LDC  reduce 118
	STC  reduce 118
	MRC  reduce 118
	MCR  reduce 118
	LEA  reduce 118
	NOP  reduce 118
	MRS  reduce 118
	MSR  reduce 118

	constexpr  goto 88
	opt_constexpr  goto 89


state 26
	init : INIT .  (48)

	.  reduce 48


state 27
	ref : REF . namelist  (49)

	NAME  shift 78
	.  error

	namelist  goto 90


state 28
	patchinstr : PATCHINSTR . '(' instrpatch ',' stdpatch ',' machine_op ')'  (50)

	'('  shift 91
	.  error


state 29
	statement : statement $$2 mnemonic .  (5)

	.  reduce 5


state 30
	mnemonic : pseudo_op .  (8)

	.  reduce 8


state 31
	mnemonic : machine_op .  (9)

	.  reduce 9


state 32
	pseudo_op : byte .  (10)

	.  reduce 10


state 33
	pseudo_op : short .  (11)

	.  reduce 11


state 34
	pseudo_op : word .  (12)

	.  reduce 12


state 35
	pseudo_op : blockbyte .  (13)

	.  reduce 13


state 36
	pseudo_op : blockshort .  (14)

	.  reduce 14


state 37
	pseudo_op : blockword .  (15)

	.  reduce 15


state 38
	pseudo_op : double .  (16)

	.  reduce 16


state 39
	pseudo_op : floaty .  (17)

	.  reduce 17


state 40
	pseudo_op : space .  (18)

	.  reduce 18


state 41
	pseudo_op : align .  (19)

	.  reduce 19


state 42
	pseudo_op : data .  (20)

	.  reduce 20


state 43
	pseudo_op : common .  (21)

	.  reduce 21


state 44
	pseudo_op : codetable .  (22)

	.  reduce 22


state 45
	pseudo_op : export .  (23)

	.  reduce 23


state 46
	pseudo_op : import .  (24)

	.  reduce 24


state 47
	pseudo_op : module .  (25)

	.  reduce 25


state 48
	pseudo_op : init .  (26)

	.  reduce 26


state 49
	pseudo_op : ref .  (27)

	.  reduce 27


state 50
	pseudo_op : patchinstr .  (28)

	.  reduce 28


state 51
	pseudo_op : usererror .  (29)

	.  reduce 29


state 52
	pseudo_op : userwarning .  (30)

	.  reduce 30


state 53
	pseudo_op : usernote .  (31)

	.  reduce 31


state 54
	machine_op : $$5 . ARM_op  (155)

	B  shift 92
	BL  shift 93
	AND  shift 94
	EOR  shift 95
	SUB  shift 96
	RSB  shift 97
	ADD  shift 98
	ADC  shift 99
	SBC  shift 100
	RSC  shift 101
	ORR  shift 102
	BIC  shift 103
	TST  shift 104
	TEQ  shift 105
	CMP  shift 106
	CMN  shift 107
	MOV  shift 108
	MVN  shift 109
	MUL  shift 110
	MLA  shift 111
	LDR  shift 112
	STR  shift 113
	LDM  shift 114
	STM  shift 115
	SWI  shift 116
	SWP  shift 117
	CDO  shift 118
	LDC  shift 119
	STC  shift 120
	MRC  shift 121
	MCR  shift 122
	LEA  shift 123
	NOP  shift 124
	MRS  shift 125
	MSR  shift 126
	.  error

	branch_ops  goto 127
	move_ops  goto 128
	logic_ops  goto 129
	comp_ops  goto 130
	data_ops  goto 131
	ldstmult_ops  goto 132
	cdt_ops  goto 133
	crt_ops  goto 134
	ARM_op  goto 135
	branch  goto 136
	dataproc  goto 137
	arm6psr  goto 138
	multiply  goto 139
	datatran  goto 140
	ldstmult  goto 141
	softintr  goto 142
	swap  goto 143
	coproc  goto 144
	pseudo  goto 145
	move  goto 146
	comp  goto 147
	logic  goto 148
	mrs  goto 149
	msr  goto 150
	cdo  goto 151
	cdt  goto 152
	crt  goto 153


state 55
	usererror : USERERROR STRINGCONST .  (51)

	.  reduce 51


state 56
	userwarning : USERWARNING STRINGCONST .  (52)

	.  reduce 52


state 57
	usernote : USERNOTE STRINGCONST .  (53)

	.  reduce 53


state 58
	byte : BYTE codeconstlist .  (32)
	codeconstlist : codeconstlist . ',' codeconst  (70)

	','  shift 154
	$end  reduce 32
	error  reduce 32
	USERERROR  reduce 32
	USERWARNING  reduce 32
	USERNOTE  reduce 32
	BYTE  reduce 32
	SHORT  reduce 32
	WORD  reduce 32
	FLOATY  reduce 32
	DOUBLE  reduce 32
	BLOCKBYTE  reduce 32
	BLOCKSHORT  reduce 32
	BLOCKWORD  reduce 32
	SPACE  reduce 32
	ALIGN  reduce 32
	DATA  reduce 32
	COMMON  reduce 32
	CODETABLE  reduce 32
	EXPORT  reduce 32
	IMPORT  reduce 32
	MODULE  reduce 32
	INIT  reduce 32
	REF  reduce 32
	PATCHINSTR  reduce 32
	LABEL  reduce 32
	B  reduce 32
	BL  reduce 32
	AND  reduce 32
	EOR  reduce 32
	SUB  reduce 32
	RSB  reduce 32
	ADD  reduce 32
	ADC  reduce 32
	SBC  reduce 32
	RSC  reduce 32
	ORR  reduce 32
	BIC  reduce 32
	TST  reduce 32
	TEQ  reduce 32
	CMP  reduce 32
	CMN  reduce 32
	MOV  reduce 32
	MVN  reduce 32
	MUL  reduce 32
	MLA  reduce 32
	LDR  reduce 32
	STR  reduce 32
	LDM  reduce 32
	STM  reduce 32
	SWI  reduce 32
	SWP  reduce 32
	CDO  reduce 32
	LDC  reduce 32
	STC  reduce 32
	MRC  reduce 32
	MCR  reduce 32
	LEA  reduce 32
	NOP  reduce 32
	MRS  reduce 32
	MSR  reduce 32


state 59
	codeconstlist : $$3 . codeconst  (69)

	NAME  shift 82
	NUMBER  shift 83
	CHARCONST  shift 84
	MODSIZE  shift 155
	MODNUM  shift 156
	DATASYMB  shift 157
	CODESYMB  shift 158
	DATAMODULE  shift 159
	LABELREF  shift 160
	CODESTUB  shift 161
	ADDRSTUB  shift 162
	BYTESWAP  shift 163
	SHIFT  shift 164
	P_ADD  shift 165
	P_OR  shift 166
	STRINGCONST  shift 167
	'-'  shift 85
	'('  shift 86
	'~'  shift 87
	.  error

	codeconst  goto 168
	constexpr  goto 169
	stdpatch  goto 170


state 60
	short : SHORT codeconstlist .  (33)
	codeconstlist : codeconstlist . ',' codeconst  (70)

	','  shift 154
	$end  reduce 33
	error  reduce 33
	USERERROR  reduce 33
	USERWARNING  reduce 33
	USERNOTE  reduce 33
	BYTE  reduce 33
	SHORT  reduce 33
	WORD  reduce 33
	FLOATY  reduce 33
	DOUBLE  reduce 33
	BLOCKBYTE  reduce 33
	BLOCKSHORT  reduce 33
	BLOCKWORD  reduce 33
	SPACE  reduce 33
	ALIGN  reduce 33
	DATA  reduce 33
	COMMON  reduce 33
	CODETABLE  reduce 33
	EXPORT  reduce 33
	IMPORT  reduce 33
	MODULE  reduce 33
	INIT  reduce 33
	REF  reduce 33
	PATCHINSTR  reduce 33
	LABEL  reduce 33
	B  reduce 33
	BL  reduce 33
	AND  reduce 33
	EOR  reduce 33
	SUB  reduce 33
	RSB  reduce 33
	ADD  reduce 33
	ADC  reduce 33
	SBC  reduce 33
	RSC  reduce 33
	ORR  reduce 33
	BIC  reduce 33
	TST  reduce 33
	TEQ  reduce 33
	CMP  reduce 33
	CMN  reduce 33
	MOV  reduce 33
	MVN  reduce 33
	MUL  reduce 33
	MLA  reduce 33
	LDR  reduce 33
	STR  reduce 33
	LDM  reduce 33
	STM  reduce 33
	SWI  reduce 33
	SWP  reduce 33
	CDO  reduce 33
	LDC  reduce 33
	STC  reduce 33
	MRC  reduce 33
	MCR  reduce 33
	LEA  reduce 33
	NOP  reduce 33
	MRS  reduce 33
	MSR  reduce 33


state 61
	word : WORD codeconstlist .  (34)
	codeconstlist : codeconstlist . ',' codeconst  (70)

	','  shift 154
	$end  reduce 34
	error  reduce 34
	USERERROR  reduce 34
	USERWARNING  reduce 34
	USERNOTE  reduce 34
	BYTE  reduce 34
	SHORT  reduce 34
	WORD  reduce 34
	FLOATY  reduce 34
	DOUBLE  reduce 34
	BLOCKBYTE  reduce 34
	BLOCKSHORT  reduce 34
	BLOCKWORD  reduce 34
	SPACE  reduce 34
	ALIGN  reduce 34
	DATA  reduce 34
	COMMON  reduce 34
	CODETABLE  reduce 34
	EXPORT  reduce 34
	IMPORT  reduce 34
	MODULE  reduce 34
	INIT  reduce 34
	REF  reduce 34
	PATCHINSTR  reduce 34
	LABEL  reduce 34
	B  reduce 34
	BL  reduce 34
	AND  reduce 34
	EOR  reduce 34
	SUB  reduce 34
	RSB  reduce 34
	ADD  reduce 34
	ADC  reduce 34
	SBC  reduce 34
	RSC  reduce 34
	ORR  reduce 34
	BIC  reduce 34
	TST  reduce 34
	TEQ  reduce 34
	CMP  reduce 34
	CMN  reduce 34
	MOV  reduce 34
	MVN  reduce 34
	MUL  reduce 34
	MLA  reduce 34
	LDR  reduce 34
	STR  reduce 34
	LDM  reduce 34
	STM  reduce 34
	SWI  reduce 34
	SWP  reduce 34
	CDO  reduce 34
	LDC  reduce 34
	STC  reduce 34
	MRC  reduce 34
	MCR  reduce 34
	LEA  reduce 34
	NOP  reduce 34
	MRS  reduce 34
	MSR  reduce 34


state 62
	floaty : FLOATY floatconstlist .  (35)
	floatconstlist : floatconstlist . ',' imm_fp_constexpr  (73)

	','  shift 171
	$end  reduce 35
	error  reduce 35
	USERERROR  reduce 35
	USERWARNING  reduce 35
	USERNOTE  reduce 35
	BYTE  reduce 35
	SHORT  reduce 35
	WORD  reduce 35
	FLOATY  reduce 35
	DOUBLE  reduce 35
	BLOCKBYTE  reduce 35
	BLOCKSHORT  reduce 35
	BLOCKWORD  reduce 35
	SPACE  reduce 35
	ALIGN  reduce 35
	DATA  reduce 35
	COMMON  reduce 35
	CODETABLE  reduce 35
	EXPORT  reduce 35
	IMPORT  reduce 35
	MODULE  reduce 35
	INIT  reduce 35
	REF  reduce 35
	PATCHINSTR  reduce 35
	LABEL  reduce 35
	B  reduce 35
	BL  reduce 35
	AND  reduce 35
	EOR  reduce 35
	SUB  reduce 35
	RSB  reduce 35
	ADD  reduce 35
	ADC  reduce 35
	SBC  reduce 35
	RSC  reduce 35
	ORR  reduce 35
	BIC  reduce 35
	TST  reduce 35
	TEQ  reduce 35
	CMP  reduce 35
	CMN  reduce 35
	MOV  reduce 35
	MVN  reduce 35
	MUL  reduce 35
	MLA  reduce 35
	LDR  reduce 35
	STR  reduce 35
	LDM  reduce 35
	STM  reduce 35
	SWI  reduce 35
	SWP  reduce 35
	CDO  reduce 35
	LDC  reduce 35
	STC  reduce 35
	MRC  reduce 35
	MCR  reduce 35
	LEA  reduce 35
	NOP  reduce 35
	MRS  reduce 35
	MSR  reduce 35


state 63
	floatconstlist : $$4 . imm_fp_constexpr  (72)

	NUMBER  shift 172
	FLOATNUM  shift 173
	'-'  shift 174
	'('  shift 175
	.  error

	imm_fp_constexpr  goto 176


state 64
	double : DOUBLE floatconstlist .  (36)
	floatconstlist : floatconstlist . ',' imm_fp_constexpr  (73)
